updated the code upto all the function working